# fastcrawl

./: .gitignore  Cargo.toml  Dockerfile.retriever  README.md  docker-compose.yml
.github/workflows/: rust.yml
docs/: rag_architecture.md
examples/: wiki.rs
src/: agents.rs  bloom.rs  controls.rs  embeddings.rs  frontier.rs  html.rs  lib.rs  manifest.rs  normalizer.rs  runtime.rs  vector_store.rs
src/embedder/: mod.rs  openai.rs  qdrant.rs
wiki-parser/: .gitignore  Cargo.toml  README.md
wiki-parser/examples/: page.html  page.txt
wiki-parser/src/: lib.rs  main.rs  stream.rs
wiki-parser/tests/: cli.rs  fixtures.rs
wiki-parser/tests/fixtures/expected/: bodycontent-fallback.txt  lead-with-infobox.txt  no-structured-nodes.txt  references-and-navbox.txt  sections-and-list.txt  toc-hatnote-and-thumb.txt  vector-toc-and-messageboxes.txt
wiki-parser/tests/fixtures/html/: bodycontent-fallback.html  lead-with-infobox.html  no-structured-nodes.html  references-and-navbox.html  sections-and-list.html  toc-hatnote-and-thumb.html  vector-toc-and-messageboxes.html
wiki_trainer/: README.md  model_repl  pyproject.toml
wiki_trainer/src/wiki_trainer/: __init__.py  cli.py  config.py  coverage.py  data.py  inference.py  training.py
wiki_trainer_jax/: README.md  pyproject.toml
wiki_trainer_jax/src/wiki_trainer_jax/: __init__.py  cli.py  config.py  coverage.py  data.py  dataset.py  evaluation.py  flax_model.msgpack  inference.py  model.py  qa.py  retrieval.py  tokenizer.py  training.py
