[package]
name = "fastcrawl"
version = "0.1.0"
edition = "2021"

[dependencies]
heapless = { version = "0.8", default-features = false }
tokio = { version = "1.40", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "brotli", "gzip", "http2"] }
scraper = "0.19"
url = "2.5"
