[package]
name = "fastcrawl"
version = "0.1.0"
edition = "2021"

[features]
default = []
multi_thread = ["scraper"]

[dependencies]
heapless = { version = "0.9.1", default-features = false }
tokio = { version = "1.40", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "brotli",
  "gzip",
  "http2",
  "stream",
] }
lol_html = "2.7.0"
scraper = { version = "0.24.0", optional = true }
clap = { version = "4.5", features = ["derive", "env"] }
url = "2.5"
clap_builder = "4.5.51"
