[package]
name = "fastcrawl"
version = "0.1.0"
edition = "2021"

[features]
default = []
multi_thread = []

[dependencies]
heapless = { version = "0.9.1", default-features = false }
tokio = { version = "1.40", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
  "net",
] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "brotli",
  "gzip",
  "http2",
  "stream",
  "blocking",
  "json",
] }
lol_html = "2.7.0"
scraper = { version = "0.24.0" }
crc32fast = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
url = { version = "2.5", features = ["serde"] }
clap_builder = "4.5.51"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
pgvector = { version = "0.4", features = ["postgres"] }
crossbeam-channel = "0.5"
axum = { version = "0.7", features = ["macros", "json"] }
lru = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
