[package]
name = "wiki_parser"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Extract readable text content from Wikipedia HTML"
repository = "https://example.com/wiki-parser-rs"

[dependencies]
ego-tree = "0.10"
html-escape = "0.2"
lol_html = "2.7.0"
scraper = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
pretty_assertions = "1"

[features]
default = ["multi_thread"]
multi_thread = []
debug_logs = []
