[project]
name = "wiki-trainer"
version = "0.1.0"
description = "Train custom language models on Fastcrawl Wikipedia chunks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer[all]>=0.12.5",
    "datasets>=2.19.1",
    "transformers>=4.45.0",
    "accelerate>=0.34.0",
    "sentencepiece>=0.2.0",
    "tqdm>=4.66.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
training = ["torch>=2.4.1", "bitsandbytes>=0.43.1"]

[dependency-groups]
training = ["torch>=2.4.1", "bitsandbytes>=0.43.1"]

[project.scripts]
wiki-trainer = "wiki_trainer.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wiki_trainer"]

[tool.uv]
default-groups = ["training"]
